--- a/package.json
+++ b/package.json
@@ -4,19 +4,31 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "node build-babel-public-props.js && rollup -c rollup.config.js",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.12.10",
+    "@babel/helper-annotate-as-pure": "^7.12.10",
+    "@babel/parser": "7.12.11",
+    "@babel/plugin-transform-modules-commonjs": "^7.12.1",
     "@rollup/plugin-babel": "^5.2.3",
     "@rollup/plugin-node-resolve": "^11.1.1",
     "babel-plugin-un-cjs": "^2.3.0",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "rollup": "^2.38.1",
+    "rollup-plugin-bundle-size": "^1.0.3",
+    "rollup-plugin-terser": "^7.0.2",
+    "terser": "^5.5.1",
     "typescript": "^4.1.3"
+  },
+  "prettier": {
+    "singleQuote": true,
+    "trailingComma": "all",
+    "semi": false
   }
 }
